# ChangeLog for dev-perl/yaml
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/yaml/ChangeLog,v 1.76 2009/05/08 17:49:44 tove Exp $

  08 May 2009; Torsten Veller <tove@gentoo.org> -yaml-0.65.ebuild:
  Cleanup

  07 May 2009; Raúl Porcel <armin76@gentoo.org> yaml-0.68.ebuild:
  alpha/arm/ia64/m68k/s390/sh stable wrt #268188

  06 May 2009; Jeroen Roovers <jer@gentoo.org> yaml-0.68.ebuild:
  Stable for HPPA (bug #268188).

  05 May 2009; Tiago Cunha <tcunha@gentoo.org> yaml-0.68.ebuild:
  stable sparc, bug 268188

  03 May 2009; Markus Meier <maekke@gentoo.org> yaml-0.68.ebuild:
  amd64 stable, bug #268188

  03 May 2009; Brent Baude <ranger@gentoo.org> yaml-0.68.ebuild:
  stable ppc64, bug 268188

  02 May 2009; nixnut <nixnut@gentoo.org> yaml-0.68.ebuild:
  ppc stable #268188

  02 May 2009; Torsten Veller <tove@gentoo.org> yaml-0.68.ebuild:
  Stable on x86 (#268188)

  01 May 2009; Torsten Veller <tove@gentoo.org> -yaml-0.39.ebuild,
  -yaml-0.66.ebuild:
  Cleanup

  19 Mar 2009; Raúl Porcel <armin76@gentoo.org> yaml-0.65.ebuild,
  yaml-0.66.ebuild, yaml-0.68.ebuild:
  ~m68k love, thanks to kolla for testing

*yaml-0.68 (08 Dec 2008)

  08 Dec 2008; Robin H. Johnson <robbat2@gentoo.org> +yaml-0.68.ebuild:
  Version bump.

  15 Sep 2008; Torsten Veller <tove@gentoo.org> -yaml-0.58.ebuild,
  -yaml-0.60.ebuild, -yaml-0.62.ebuild:
  Cleanup

*yaml-0.66 (23 Apr 2008)

  23 Apr 2008; Torsten Veller <tove@gentoo.org> +yaml-0.66.ebuild:
  Version bump

  28 Mar 2008; Jeroen Roovers <jer@gentoo.org> yaml-0.65.ebuild:
  Stable for HPPA too.

  29 Dec 2007; <welp@gentoo.org> yaml-0.65.ebuild:
  Keyworded ~sparc-fbsd; bug 203655

  19 Nov 2007; Joshua Kinard <kumba@gentoo.org> yaml-0.65.ebuild:
  Stable on mips.

  10 Nov 2007; Samuli Suominen <drac@gentoo.org> yaml-0.65.ebuild:
  amd64 stable

  08 Oct 2007; Tom Gall <tgall@gentoo.org> yaml-0.65.ebuild:
  stable on ppc64
