@@ -2,13 +2,15 @@
 Hash: SHA1
 
 DIST YAML-0.68.tar.gz 92676 RMD160 7a6e01566a2eda114ab290e6b20b05c51f03a099 SHA1 65a59fd0b7762ba4aeb95a182f89d80daea6c63d SHA256 64c06038788da7d551112a2cdff80353a41509a73d0fd0e9d29fb929f5bbe079
+DIST YAML-0.70.tar.gz 110847 RMD160 97db54906774318b8ab9a0368b93953bb04764e4 SHA1 e13620a51d0acc31fa4f81e9bee346ba2aab22ed SHA256 ec10aa37348109ec5e92b8076c94b44ceac0870cc61de5efd1a3e2fe7a95c000
 EBUILD yaml-0.68.ebuild 665 RMD160 4dc625ca96b584713dd25ac39f48aa285291b19d SHA1 4024f99c4270a4d045b437608e784e925d18e4c7 SHA256 4e6275e91b9155980aae22dda8669fd4625d63f794cb171f2fe5f2aa00edfb07
-MISC ChangeLog 8184 RMD160 9c6693343dc3d8e1d120ddda82709f1bc37d680e SHA1 84a3629bdbd2f718d0377fb3d31557a1a054a8c3 SHA256 1d8a2b68f94adcaf78f013f36d4c31f9c524bcae7a328e94bc84a425ca6b033e
+EBUILD yaml-0.70.ebuild 505 RMD160 69058b75d9afb25721a8a3799101821b42831e41 SHA1 3de5fc9aef4fed83c926ad59b843a35aa8d69259 SHA256 f748a4916bb64906cd18f552c4289557c402a088e28718de882292133a9383d6
+MISC ChangeLog 8293 RMD160 5b5426dd1dfecaa898f162d2ff0f8ea53ba09935 SHA1 450a26fd02181c65a495bad8e124c22ddf86d2b8 SHA256 d6e8713c5d8bebe46f093831ce43028233daf1282bd9b90a1f9880f4742e7bc7
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iEYEARECAAYFAkoEcL0ACgkQV3J2n04EauwwawCfRG9k/1kMEeLXEwoXvg255mOg
-3foAnRb+/9WlFRNTKcukThOrYaT89Ucy
-=PCKu
+iEYEARECAAYFAkqBh6AACgkQV3J2n04EauxQzQCghn8uVhnkRF4EA9h63geIZpva
+TDkAnjAJgGOW+Uq5gSAS0pPHBs/QJL/8
+=RLZk
 -----END PGP SIGNATURE-----
