@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/yaml
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/yaml/ChangeLog,v 1.76 2009/05/08 17:49:44 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/yaml/ChangeLog,v 1.77 2009/08/11 15:00:43 tove Exp $
+
+*yaml-0.70 (11 Aug 2009)
+
+  11 Aug 2009; Torsten Veller <tove@gentoo.org> +yaml-0.70.ebuild:
+  Version bump
 
   08 May 2009; Torsten Veller <tove@gentoo.org> -yaml-0.65.ebuild:
   Cleanup
